--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,15 @@ before_install:
   - sudo apt-get install -qq -y python-pip python-dev
 
 install:
-  - ./install-dependencies.sh
+  - ./install-dependencies.sh $VIRTUAL_ENV
+  - pip install -r requirements.txt
   - python setup.py build
   - python setup.py -q install
+
   
-script: py.test
+script:
+  - echo "$VIRTUAL_ENV/lib"
+  - LD_LIBRARY_PATH="$VIRTUAL_ENV/lib" py.test
 
 notifications:
   on_success: change
