--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+sudo: required
+dist: trusty
 language: python
 
 before_install:
@@ -5,6 +7,7 @@ before_install:
   - sudo apt-get install -qq -y build-essential libtool autoconf
   - sudo apt-get install -qq -y libgmp-dev libmpfr-dev libqd-dev
   - sudo apt-get install -qq -y python-pip python-dev
+  - sudo apt-get install -qq -y python-flake8
 
 install:
   - ./install-dependencies.sh $VIRTUAL_ENV
