--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
 
 install:
   - ./install-dependencies.sh $VIRTUAL_ENV
+  - pip install Cython
   - pip install -r requirements.txt
   - python setup.py build
   - python setup.py -q install
