drop -e for cysignals requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 Cython
 pytest
--e git+https://github.com/sagemath/cysignals#egg=cysignals
+git+https://github.com/sagemath/cysignals#egg=cysignals
 
