refactoring for new fplll

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
   
 script:
   - LD_LIBRARY_PATH="$VIRTUAL_ENV/lib" py.test
-  - LD_LIBRARY_PATH="$VIRTUAL_ENV/lib" python -m doctest src/fpylll/*.pyx
+  - LD_LIBRARY_PATH="$VIRTUAL_ENV/lib" python -m doctest src/fpylll/*.pyx src/fpylll/fplll/*.pyx
 
 notifications:
   on_success: change
