include tests in source distribution

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 global-include README.rst requirements.txt suggestions.txt
 global-include setup.py *.pyx
 graft src
+include tests/test_*
 prune build
 prune dist
