--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@ language: python
 python:
   - "2.7"
   - "3.5"
+matrix:
+  include:
+    - env: HAVE_QD=no
+    - env: HAVE_LONG_DOUBLE=no
+    - env: HAVE_NUMPY=no
+    - env:
+        - HAVE_QD=no
+        - HAVE_LONG_DOUBLE=no
 
 cache: pip
 
