--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-addopts = -v
-testpaths = tests
+addopts = -v --doctest-glob "*.pyx"  --doctest-glob "*.rst"  --doctest-modules --ignore=docs/conf.py
+testpaths = tests docs src/fpylll
 norecursedirs = build
