fine! that was stupid

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 addopts = -v --doctest-glob "*.pyx"  --doctest-glob "*.rst"  --doctest-modules --ignore=docs/conf.py
 testpaths = tests docs src/fpylll
-norecursedirs = build
+norecursedirs = build src/fpylll/mpfr src/fpylll/qd
