--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 - python setup.py build
 - python setup.py -q install
 before_script:
-- flake8 --max-line-length=120 --max-complexity=16 --ignore=E22,E241,E741 src
+- flake8 --max-line-length=120 --max-complexity=16 --ignore=E22,E241,E741,E203 src
 script:
 - LD_LIBRARY_PATH="$VIRTUAL_ENV/lib" PY_IGNORE_IMPORTMISMATCH=1 py.test
 - LD_LIBRARY_PATH="$VIRTUAL_ENV/lib" python setup.py sdist
