--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Get Name of Artifact
         run: |
-          ARTIFACT_PATHNAME=$(ls dist/*.tar.gz | head -n 1)
+          ARTIFACT_PATHNAME=$(ls dist/fpylll-*.tar.gz | head -n 1)
           ARTIFACT_NAME=$(basename $ARTIFACT_PATHNAME)
           echo ::set-env name=ARTIFACT_NAME::${ARTIFACT_NAME}
           echo ::set-env name=ARTIFACT_PATHNAME::${ARTIFACT_PATHNAME}
