ship tests/tools.py

--- a/.github/workflows/check-style.yml
+++ b/.github/workflows/check-style.yml
@@ -21,5 +21,5 @@ jobs:
         run: pip install flake8
           
       - name: Flake8
-        run: flake8 --max-line-length=120 --max-complexity=16 --ignore=E22,E241,E741,E203 src
+        run: flake8 --max-line-length=120 --max-complexity=16 --ignore=E22,E241,E741,E203 src tests
 
