--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ global-include README.rst requirements.txt suggestions.txt
 global-include setup.py *.pyx
 graft src
 include tests/test_*
+include tests/tools.py
 include LICENSE
 prune build
 prune dist
