--- a/.github/workflows/sdist.yml
+++ b/.github/workflows/sdist.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.10", "3.11", "3.12"]
         have_qd: [yes, no]
         have_numpy: [yes, no]
 
