--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
 requires = ["setuptools",
             "Cython",
-            "cysignals"]
+            "cysignals<1.12.0"]
 build-backend = "setuptools.build_meta"
