--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,5 +97,5 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: ${{ matrix.os }}-${{ matrix.arch }}-wheels
           path: ./wheelhouse/*.whl
