--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,3 +99,25 @@ jobs:
         with:
           name: ${{ matrix.os }}-${{ matrix.arch }}-wheels
           path: ./wheelhouse/*.whl
+
+  release:
+    needs: [build, build_wheels]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: "*-wheels"
+          path: dist
+          merge-multiple: true
+      - uses: softprops/action-gh-release@v2
+        with:
+          generate_release_notes: true
+          prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') || contains(github.ref, 'dev') || contains(github.ref, 'rc') }}
+          files: |
+            dist/*
+    permissions:
+      contents: write
