--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -10,6 +10,10 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    # https://github.com/pypa/gh-action-pypi-publish?tab=readme-ov-file#trusted-publishing
+    permissions:
+      id-token: write
+
     steps:
 
       - uses: actions/download-artifact@v4
