--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -13,6 +13,9 @@ jobs:
     # https://github.com/pypa/gh-action-pypi-publish?tab=readme-ov-file#trusted-publishing
     permissions:
       id-token: write
+    environment:
+      name: pypi
+      url: https://pypi.org/p/fpylll
 
     steps:
 
