.github/workflows/pypi-publish.yml: Fix up

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           pattern: "dist"
           path: dist
+          merge-multiple: true
           github-token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
           run-id: ${{ github.event.inputs.run-id }}
