--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
 requires = ["setuptools",
-            "Cython",
-            "cysignals<1.12.0"]
+            "Cython>=3.0",
+            "cysignals"]
 build-backend = "setuptools.build_meta"
