--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  os: ubuntu-24.04
+  os: ubuntu-22.04
   tools:
     python: "3.11"
 
@@ -21,4 +21,4 @@ python:
     - requirements: requirements.txt
 
 conda:
-    file: readthedocs-conda.yml
+    environment: readthedocs-conda.yml
