--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -19,6 +19,8 @@ sphinx:
 python:
   install:
     - requirements: requirements.txt
+    - method: setuptools  # runs setup.py
+      path: .  
 
 conda:
     environment: readthedocs-conda.yml
