--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -57,8 +57,8 @@ jobs:
           
       - name: Compile
         run: |
-          python setup.py build_ext -j $JOBS
-          python setup.py install
+          python setup.py build -j $JOBS
+          pip install .
 
       - name: Test
         run: PY_IGNORE_IMPORTMISMATCH=1 python -m pytest
