.github/workflows/sdist.yml: Do not run on PRs that only change .github/workflows

--- a/.github/workflows/sdist.yml
+++ b/.github/workflows/sdist.yml
@@ -3,6 +3,9 @@ name: Source Distribution Test
 on: 
   push:
   pull_request:
+    paths:
+      - '**'
+      - '!.github/workflows/**'
   schedule:
     - cron: '0 0 * * 0' # weekly
 
