.github/workflows/tests.yml: Do not run on PRs that only change .github/workflows

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,6 +3,9 @@ name: Tests
 on: 
   push:
   pull_request:
+    paths:
+      - '**'
+      - '!.github/workflows/**'
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * 0' # weekly
